--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
   <link href="style.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta charset = "utf-8">
-</head>
-
-<body>
-  
   <header class="header">
     <nav class="navbar">
         <a href="index.html" class="nav-logo">Bauel Media</a>
@@ -34,18 +30,31 @@
     </nav>
 </header>
 <div class="nav-a">
-  <ul class="nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="Benefits.html">Benefits</a></li>
-      <li><a href="contact.html">Contact</a></li>
-  </ul>
-</div>
+    <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="Benefits.html">Benefits</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
+</head>
 
+<body class="bhome">
+  
+
+<div class="wel">
+    <h1 class="welcome">Welcome </h1> 
+    <h2 class="ka"></h2>
+    <h3 class="punchline"> Serving The Greater Detroit Metropolitian Area</h3>
+    
+
+</div>
 <div class="home">
     <div class="h">
-  <h1 class="wel">Welcome</h1>
-  <h3 style="color:#0d0e0e" > <a href=contact.html style="text-decoration: none; color: #0d0e0e;">Free  Estimate</a> 
+  
+  <h3 style="color:#0d0e0e" > 
+    <a href=contact.html style="text-decoration: none; color: #0d0e0e;">
+        Free  Estimate</a> 
    
   </div></div>
   
