--- a/index.html
+++ b/index.html
@@ -64,60 +64,7 @@
 </div>
 
 
-<div class="benefits">
-    <h1 class="b">Benefits of Having a Website</h1>
-  
-    <h2 class="h2">1. Save Money </h2>
-    <p class="pb">	Cut out most of the cost when 
-        it comes to flyers, brochures, and other 
-        paper advertisements with an online presence. 
-        This way you will be advertising yourself 
-        (portfolio website) and/or your 
-        business, while saving money. </p>
-  
-    <h2 class="h2" > 2.Professionalism </h2>
-    <p class="pb">Owning a website with your name not only
-         solidify your business recognition, but 
-         credibility as well. It shows that you are 
-         serious and open for business. Making it
-          easier for you to be found if a potential 
-          customer were to lose your 
-        business card or flyer. </p>
-  
-    <h2 class="h2">3.	Display Talent</h2>
-    <p class="pb">	Having a portfolio builds 
-        trust and confidence. This way one can add
-         testimonials and awards. Positive reviews and 
-         customer experience plays a huge role in 
-         attracting new clients 
-        and prospects. </p>
-  
-    <h2 class="h2">4.	Easy Access to Data</h2>
-    <p class="pb">	For the customer, it makes it
-         easier for them to find out what your 
-         services are beforehand. Having an FAQ
-          section where they can easily find answers
-           to everyday questions take the strain of
-            both parties, allowing customers to 
-            obtain answers before even arriving to business location. As 
-            the owner it gives you the opportunity
-             to review data on site visits and be
-              more informed on type
-         of clientele. </p>
-  
-    <h2 class="h2">5.	Ecommerce </h2>
-    <p class="pb">	Selling products has become
-         less of a hassle and easier to hold on to 
-         profit. Instead of having an ordinary 
-         business location and having to pay for it;
-          have an ecommerce store. This cuts the 
-          expense of needing a space and allows you 
-          to sell and ship 
-        all online. </p>
-    
-  
-  </div>
-  
+  </body>
   
   
 
