added final touches to portfolio site

--- a/Benefits.html
+++ b/Benefits.html
@@ -32,20 +32,18 @@
         </div>
     </nav>
 </header>
-<div class="nav-a">
-  <ul class="nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="Benefits.html">Benefits</a></li>
-      <li><a href="contact.html">Contact</a></li>
-  </ul>
+
+<div class="b-headimg">
+    <br>    <br><br><br><br>
+    <br><br><br><br>      <br><br><br><br>
+      <br><br><br><br>    <br><br><br><br>
+    
 </div>
 
-
-
+<h1 class="b">Benefits of Having a Website</h1>
 <div class="benefits">
-  <h1 class="b">Benefits of Having a Website</h1>
-
+ 
+<div class="bdiv">
   <h2 class="h2">1. Save Money </h2>
   <p class="pb">	Cut out most of the cost when 
       it comes to flyers, brochures, and other 
@@ -53,7 +51,8 @@
       This way you will be advertising yourself 
       (portfolio website) and/or your 
       business, while saving money. </p>
-
+</div> 
+<div  class="bdiv">
   <h2 class="h2" > 2.Professionalism </h2>
   <p class="pb">Owning a website with your name not only
        solidify your business recognition, but 
@@ -62,7 +61,8 @@
         easier for you to be found if a potential 
         customer were to lose your 
       business card or flyer. </p>
-
+  </div>
+<div  class="bdiv">
   <h2 class="h2">3.	Display Talent</h2>
   <p class="pb">	Having a portfolio builds 
       trust and confidence. This way one can add
@@ -70,7 +70,8 @@
        customer experience plays a huge role in 
        attracting new clients 
       and prospects. </p>
-
+    </div>
+    <div  class="bdiv">
   <h2 class="h2">4.	Easy Access to Data</h2>
   <p class="pb">	For the customer, it makes it
        easier for them to find out what your 
@@ -83,6 +84,8 @@
            to review data on site visits and be
             more informed on type
        of clientele. </p>
+    </div>
+    <div  class="bdiv">
 
   <h2 class="h2">5.	Ecommerce </h2>
   <p class="pb">	Selling products has become
@@ -92,11 +95,10 @@
         have an ecommerce store. This cuts the 
         expense of needing a space and allows you 
         to sell and ship 
-      all online. </p>
+      all online. </p> </div>
   
 
 </div>
-
 
 
 <script src="script.js"></script>
