--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class="bhome">
 <div class="wel">
     <h1 class="welcome">Welcome </h1> 
-    <h2 class="ka"></h2>
+    <h2 class="ka">Bauel Media</h2>
     <h3 class="punchline"> Serving The Greater Detroit Metropolitian Area</h3>
     
 
@@ -54,11 +54,16 @@
 
 <div class="service-wrapper">  
     <h2 class="service">Services</h2>
-    <p class="service-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-         Ipsam, soluta nesciunt maxime porro voluptatibus explicabo 
-         tempore! Molestiae distinctio eum doloribus optio? Nam porro
-          eius doloremque, consequatur
-         dolorem quas voluptas minus.</p>
+    <p class="service-p">Bauel Media is a Web Development 
+      Agency based in Southeast Michigan (Detroit Metropolitan Area).
+       Bauel Media offers a variety of Digital Marketing services from
+        Website Hosting, Web development & design, social media 
+        marketing and <a  href="contact.html" style="text-decoration: none;"> more. </a>
+        These services have a variety of<a  href="Benefits.html" style="text-decoration: none;">
+        benefits  </a>
+        including but not limited to displaying talent to potential
+        clients, showing professionalism, and
+       growing up your e-commerce business. </p>
          <br>
     
 </div>
@@ -66,13 +71,7 @@
 
   </body>
   
-  <div class="footer">
-  <footer>
-    f
-  </footer>
-
-  </div>
-
+  
 
 
 
