--- a/portfolio.html
+++ b/portfolio.html
@@ -47,8 +47,19 @@
 
 </div>
 
+    <footer class="footer">
+        <p class="foot">&#169 2022, Lebanon Halal Famous Basterma.
+             Powered by <a href="https://bauelmedia.com/" style="text-decoration: none; 
+             color: rgb(255, 128, 0);"
+             >
+                Bauel Media</a>
+        </p>
+  
+    </footer>
+ 
 <script src="script.js">
 
 </script>
 </body>
 </html>
+
