--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
  
 
 </div>
-
+<div>
     <footer class="footer">
         <p class="foot">&#169 2022, Lebanon Halal Famous Basterma.
              Powered by <a href="https://bauelmedia.com/" style="text-decoration: none; 
@@ -56,7 +56,7 @@
         </p>
   
     </footer>
- 
+</div>
 <script src="script.js">
 
 </script>
