--- a/portfolio.html
+++ b/portfolio.html
@@ -48,15 +48,15 @@
 </div>
 <div>
     <footer class="footer">
-        <p class="foot">&#169 2022, Lebanon Halal Famous Basterma.
-             Powered by <a href="https://bauelmedia.com/" style="text-decoration: none; 
+        <p class="foot">&#169 2022, Bauel Media,<br> LLC.
+         <a href="https://bauelmedia.com/" style="text-decoration: none; 
              color: rgb(255, 128, 0);"
              >
                 Bauel Media</a>
         </p>
   
     </footer>
-</div>
+  </div>
 <script src="script.js">
 
 </script>
