--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,8 @@
  <div class="box"><a href="http://mldluxurycartransportation.com/index.html"><img src="mld home desktop.jpg" ></a></div>
  <div class="box"><a href="http://mldluxurycartransportation.com/service.html"><img src="mld s desktop.jpg"></a></div>
  <div class="box"><a href="http://mldluxurycartransportation.com/about.html"><img src="mld a desktop.jpg"></a></div>
- <div class="box"><a href=""><img src="leb.jpg"></a></div>
+ <div class="box"><a href="https://lebanonhalalbasterma.com/"><img src="leb.jpg"></a></div>
+ <div class="box"><a href="https://maranathaexoticafricanmarket.com/"><img src="mar.jpg"></a></div>
  <div class="box"><img src="jl h. jpg.png" ></a></div>
  
 
